--- a/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.html
+++ b/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.html
@@ -1,13 +1,13 @@
-<div class="main shadow">
-  <div *ngIf="categories.length === 0">
-    <p class="message">No cuenta con temas</p>
-  </div>
-  <div class="random-text" [ngStyle]="{
-      left: item.pos.x + 'px',
-      right: item.pos.y + 'px',
-      'font-size': item.size + 'px',
-      opacity: item.opacity
-    }" *ngFor="let item of categories">
+<div *ngIf="categories.length === 0" class="main shadow">
+  <p class="message">
+    <strong>No cuenta con temas</strong>
+  </p>
+</div>
+
+<div class="main shadow" *ngIf="categories.length !== 0">
+  <div class="random-text"
+    [ngStyle]="{left: item.pos.x + 'px', right: item.pos.y + 'px', 'font-size': item.size + 'px', opacity: item.opacity }"
+    *ngFor="let item of categories">
     <span (click)="redirect(item._id)" style="cursor: pointer" [matTooltip]="item.title.toUpperCase()"
       matTooltipClass="tooltip">{{ item.shortTitle }}
       <div class="sb4"></div>
