--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -130,4 +130,9 @@
   .btn-permissios:hover {
     color: #2dff8b;
   }
+
+  .fixtoolbar {
+    position: relative !important;
+    padding: 0 20px;
+  }
 }
