--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -1,19 +1,16 @@
-<mat-toolbar *ngIf="isDataAvailable">
+<mat-toolbar *ngIf="isDataAvailable" [class.fixtoolbar]="isMobile">
   <div class="set-6 logo">
-    <div class="set-4">
+    <div class="set-4" [class.set-12]="isMobile">
       <img src="../../../assets/images/mexicolectivo-full-green.png" (click)="linkMe('home')" />
     </div>
-    <div class="set-8 search-hldr">
+    <div class="set-8 search-hldr" *ngIf="!isMobile">
       <form [formGroup]="searchFormGroup" (submit)="onSearch(searchFormGroup)">
         <input type="text" placeholder="Búscar en Mexicolectivo..." class="bar-search" formControlName="search">
       </form>
     </div>
   </div>
 
-  <div class="set-6 navigation">
-    <!-- <button *ngIf="permission == false && isPublic > 0" type="button" (click)="popPermissionsDialog()">
-      Permiso para editar
-    </button> -->
+  <div class="set-6 navigation" *ngIf="!isMobile">
     <button *ngIf="permission == true && isPublic > 0" type="button" (click)="redirectEdition()">
       Ir a edición
     </button>
@@ -66,5 +63,11 @@
         <span>Usuarios</span>
       </button>
     </mat-menu>
+  </div>
+
+  <div class="set-6 navigation" *ngIf="isMobile">
+    <button type="button" (click)="displayMobileMenu()">
+      <mat-icon color="accent">menu</mat-icon>
+    </button>
   </div>
 </mat-toolbar>
