--- a/src/app/hub/sign-in/sign-in.component.scss
+++ b/src/app/hub/sign-in/sign-in.component.scss
@@ -44,4 +44,89 @@
       float: left;
     }
   }
+
+  .imgdisplay {
+    width: 100vw;
+    height: calc(100vh - 80px);
+    background: url('../../../assets/images/group-human-hands-holding-together\ 1.png') no-repeat;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .imgoverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba($color: #00031D, $alpha: 0.8);
+    z-index: 7;
+  }
+
+  .displayform {
+    padding: 20px;
+    color: #ffffff;
+    position: relative;
+    z-index: 9;
+  }
+
+  .googlesignin,
+  .facebooksignin,
+  .applesignin,
+  .emailsignin {
+    padding: 20px 0;
+    text-align: center;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 11pt;
+    width: 100%;
+    margin: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    * {
+      margin: 0;
+    }
+  }
+
+  .googlesignin {
+    background: #ffffff;
+    color: #000000;
+
+    img {
+      width: 5%;
+      height: auto;
+      margin-right: 20px;
+    }
+  }
+
+  .facebooksignin {
+    background: #1877F2;
+    color: #ffffff;
+
+    img {
+      width: 5%;
+      height: auto;
+      margin-right: 20px;
+    }
+  }
+
+  .applesignin {
+    background: #000000;
+    color: #ffffff;
+
+    img {
+      width: 5%;
+      height: auto;
+      margin-right: 20px;
+    }
+  }
+
+  .emailsignin {
+    color: #71F5AD;
+  }
 }
