--- a/src/styles.scss
+++ b/src/styles.scss
@@ -724,3 +724,74 @@ mat-card {
     z-index: 4;
   }
 }
+
+.mobilenav {
+  height: 100vh;
+  background: rgba($color: #00031d, $alpha: 1.0);
+  position: absolute;
+  top: 0;
+  left: -100%;
+  z-index: 400;
+  transition: all .2s linear;
+
+  .topnav {
+    padding: 0 20px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    background: #00031d;
+
+    button {
+      font-size: 11pt;
+      color: #54f093;
+    }
+  }
+
+  .innernav {
+    padding: 20px;
+
+    button {
+      padding: 10px 0;
+      font-size: 11pt;
+      color: #ffffff;
+    }
+  }
+
+  .avatarhldr {
+    padding: 0 20px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    * {
+      margin: 0;
+    }
+
+    .avatar {
+      width: 64px;
+      height: 64px;
+      border-radius: 100%;
+      display: block;
+      overflow: hidden;
+      border: 2px solid #ffffff;
+      margin-right: 20px;
+
+      span {
+        font-size: 9pt;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        background: #1e7e7f;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        float: left;
+      }
+    }
+  }
+}
