add signup mobile module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
       <button type="button" (click)="utilityService.linkMe('/hub/ingresar'); open = !open">Ingresar</button>
     </div>
     <div class="set-12">
-      <button type="button" (click)="utilityService.linkMe('/hub/registro'); open = !open">Registro</button>
+      <button type="button" (click)="utilityService.linkMe('/hub/signup-mobile'); open = !open">Registro</button>
     </div>
   </div>
 
