--- a/src/app/hub/sign-in/sign-in.component.html
+++ b/src/app/hub/sign-in/sign-in.component.html
@@ -17,7 +17,7 @@
         <span>Seguir con Apple</span>
       </button>
 
-      <button type="button" class="emailsignin" (click)="utilitySrvc.linkMe('/hub/mobile')">
+      <button type="button" class="emailsignin" (click)="utilitySrvc.linkMe('/hub/signin-mobile')">
         <span>Entra con tu email</span>
       </button>
     </div>
