reload page, quit profile configuration, and error message reply email

--- a/src/app/components/spider-chart/spider-chart.component.html
+++ b/src/app/components/spider-chart/spider-chart.component.html
@@ -1,4 +1,11 @@
 <!-- <div [ngClass]="{'container': withBorder}">
   <canvas baseChart [data]="spiderData" [options]="spiderChartOptions" [type]="spiderChartType"> </canvas>
 </div> -->
-<canvas baseChart [data]="spiderData" [options]="spiderChartOptions" [type]="spiderChartType"> </canvas>
+<canvas
+  id="canvas"
+  baseChart
+  [data]="spiderData"
+  [options]="spiderChartOptions"
+  [type]="spiderChartType"
+  >okk
+</canvas>
