--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -6,7 +6,10 @@
   <div class="set-12">
     <breadcrumbs-component>
       <li>Documentos</li>
-      <li *ngIf="!!document.title; else noTitle" (click)="utilityService.linkMe('/documentos/' + document._id)">
+      <li
+        *ngIf="!!document.title; else noTitle"
+        (click)="utilityService.linkMe('/documentos/' + document._id)"
+      >
         {{ document.title }}
       </li>
       <ng-template #noTitle>
@@ -18,8 +21,11 @@
 
   <div class="set-12 author-hldr">
     <span class="created-by" *ngIf="category.createdBy != null">
-      Autor: <span class="author">{{category.createdBy.firstname}}
-        {{category.createdBy.lastname}}</span>
+      Autor:
+      <span class="author"
+        >{{ category.createdBy.firstname }}
+        {{ category.createdBy.lastname }}</span
+      >
     </span>
   </div>
 
@@ -27,8 +33,14 @@
     <div class="set-3 col-lft">
       <mat-card class="set-12 doc-description">
         <div class="set-12 imghldr">
-          <mat-icon class="pano" *ngIf="category.images.length == 0">panorama</mat-icon>
-          <img [src]="category.images[0]" alt="" *ngIf="category.images.length != 0">
+          <mat-icon class="pano" *ngIf="category.images.length == 0"
+            >panorama</mat-icon
+          >
+          <img
+            [src]="category.images[0]"
+            alt=""
+            *ngIf="category.images.length != 0"
+          />
           <div class="overlay" (click)="popImageViewer()">
             <mat-icon color="accent">photo_camera</mat-icon>
             <div class="cover"></div>
@@ -39,8 +51,13 @@
           <div class="set-12 card-title">
             <div class="set-10">{{ selectedCategory.name }}</div>
             <div class="set-2 txt-right">
-              <button type="button" [matMenuTriggerFor]="menu"
-                [disabled]="!actionControlActivityList.includes(user.activityName)">
+              <button
+                type="button"
+                [matMenuTriggerFor]="menu"
+                [disabled]="
+                  !actionControlActivityList.includes(user.activityName)
+                "
+              >
                 <mat-icon>more_vert</mat-icon>
               </button>
 
@@ -50,16 +67,31 @@
                   <span>Editar categoría</span>
                 </button>
 
-                <button type="button" mat-menu-item (click)="popDocumentComments()">
+                <button
+                  type="button"
+                  mat-menu-item
+                  (click)="popDocumentComments()"
+                >
                   <mat-icon>question_answer</mat-icon>
                   <span>Ver comentarios</span>
                 </button>
               </mat-menu>
             </div>
           </div>
-          <p class="card-description" *ngIf="category.description != null">{{category.description}}</p>
-          <button type="button" class="card-description link" (click)="popDescriptionViewerDialog()">Leer más</button>
-          <avatars-row [users]="collaborators" *ngIf="actionControlActivityList.includes(user.activityName)">
+          <p class="card-description" *ngIf="category.description != null">
+            {{ category.description }}
+          </p>
+          <button
+            type="button"
+            class="card-description link"
+            (click)="popDescriptionViewerDialog()"
+          >
+            Leer más
+          </button>
+          <avatars-row
+            [users]="collaborators"
+            *ngIf="actionControlActivityList.includes(user.activityName)"
+          >
           </avatars-row>
         </div>
       </mat-card>
@@ -73,7 +105,7 @@
           </div>
           <div class="set-8">
             <p><small>Usuarios</small></p>
-            <strong>{{collaborators.length}}</strong>
+            <strong>{{ collaborators.length }}</strong>
           </div>
         </div>
 
@@ -97,7 +129,11 @@
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
             <mat-select (selectionChange)="onSelectCoverage($event)">
-              <mat-option *ngFor="let option of document.coverage" [value]="option._id" [disabled]="!option.enabled">
+              <mat-option
+                *ngFor="let option of document.coverage"
+                [value]="option._id"
+                [disabled]="!option.enabled"
+              >
                 <small>{{ option.name | titlecase }}</small>
               </mat-option>
             </mat-select>
@@ -105,16 +141,36 @@
         </div>
 
         <div class="set-8 txt-right">
-          <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Comentario"
-            (click)="popAddCommentsDialog()">
+          <button
+            type="button"
+            mat-mini-fab
+            color="primary"
+            class="mini"
+            matTooltip="Agregar Comentario"
+            (click)="popAddCommentsDialog()"
+          >
             <mat-icon>add_comment</mat-icon>
           </button>
-          <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Colaborador"
-            (click)="popAddDocumentCollaborator()" *ngIf="actionControlActivityList.includes(user.activityName)">
+          <button
+            type="button"
+            mat-mini-fab
+            color="warn"
+            class="mini"
+            matTooltip="Agregar Colaborador"
+            (click)="popAddDocumentCollaborator()"
+            *ngIf="actionControlActivityList.includes(user.activityName)"
+          >
             <mat-icon>person_add</mat-icon>
           </button>
-          <button type="button" mat-mini-fab color="accent" class="mini" matTooltip="Agregar Sub Categoría"
-            (click)="popAddDocumentCategory()" *ngIf="actionControlActivityList.includes(user.activityName)">
+          <button
+            type="button"
+            mat-mini-fab
+            color="accent"
+            class="mini"
+            matTooltip="Agregar Sub Categoría"
+            (click)="popAddDocumentCategory()"
+            *ngIf="actionControlActivityList.includes(user.activityName)"
+          >
             <mat-icon>create_new_folder</mat-icon>
           </button>
         </div>
@@ -160,7 +216,12 @@
               [disabled]="subcategories.length == 0"> -->
             <mat-form-field appearance="outline">
               <mat-label>Búscar en sub categorías...</mat-label>
-              <input matInput type="text" (keyup)="applyFilter($event)" [disabled]="subcategories.length == 0">
+              <input
+                matInput
+                type="text"
+                (keyup)="applyFilter($event)"
+                [disabled]="subcategories.length == 0"
+              />
               <button matSuffix mat-icon-button>
                 <mat-icon>search</mat-icon>
               </button>
@@ -171,20 +232,43 @@
             <p>
               <small>Sin sub categorías disponibles.</small>
             </p>
-            <button type="button" mat-raised-button color="primary" (click)="popAddDocumentCategory()"
-              *ngIf="actionControlActivityList.includes(user.activityName)">
+            <button
+              type="button"
+              mat-raised-button
+              color="primary"
+              (click)="popAddDocumentCategory()"
+              *ngIf="actionControlActivityList.includes(user.activityName)"
+            >
               <small>Agregar Sub Categoría</small>
             </button>
           </div>
 
-          <table mat-table [dataSource]="dataSource" class="categories-table" *ngIf="subcategories.length != 0">
+          <table
+            mat-table
+            [dataSource]="dataSource"
+            class="categories-table"
+            *ngIf="subcategories.length != 0"
+          >
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Título</th>
               <td mat-cell *matCellDef="let element">
-                <button type="button" class="catbtn" [disabled]="!element.access"
-                  (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory.id + '/subcategoria/' + element.id)">
+                <button
+                  type="button"
+                  class="catbtn"
+                  [disabled]="!element.access"
+                  (click)="
+                    linkMe(
+                      '/documentos/' +
+                        document._id +
+                        '/categoria/' +
+                        selectedCategory.id +
+                        '/subcategoria/' +
+                        element.id
+                    )
+                  "
+                >
                   <mat-icon>question_answer</mat-icon>
-                  <small>{{element.name}}</small>
+                  <small>{{ element.name }}</small>
                 </button>
               </td>
             </ng-container>
@@ -192,45 +276,75 @@
             <ng-container matColumnDef="users">
               <th mat-header-cell *matHeaderCellDef>Usuarios</th>
               <td mat-cell *matCellDef="let element">
-                <small>{{ element.users || 'NA' }}</small>
+                <small>{{ element.users || "NA" }}</small>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="interactions">
               <th mat-header-cell *matHeaderCellDef>Interacciones</th>
               <td mat-cell *matCellDef="let element">
-                <small>{{ element.interactions || 'NA' }}</small>
+                <small>{{ element.interactions || "NA" }}</small>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="solutions">
               <th mat-header-cell *matHeaderCellDef>Soluciones</th>
               <td mat-cell *matCellDef="let element">
-                <small>{{ element.solutions || 'NA' }}</small>
+                <small>{{ element.solutions || "NA" }}</small>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="problems">
               <th mat-header-cell *matHeaderCellDef>Problemas</th>
               <td mat-cell *matCellDef="let element">
-                <small>{{ element.problems || 'NA' }}</small>
+                <small>{{ element.problems || "NA" }}</small>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element">
-                <button type="button" mat-icon-button [matMenuTriggerFor]="menu">
+                <button
+                  type="button"
+                  mat-icon-button
+                  [matMenuTriggerFor]="menu"
+                >
                   <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button type="button" mat-menu-item [disabled]="!element.access"
-                    (click)="linkMe('/documentos-publicos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + element._id)">
+                  <button
+                    type="button"
+                    mat-menu-item
+                    [disabled]="!element.access"
+                    (click)="
+                      linkMe(
+                        '/documentos-publicos/' +
+                          document._id +
+                          '/categoria/' +
+                          selectedCategory._id +
+                          '/subcategoria/' +
+                          element._id
+                      )
+                    "
+                  >
                     <mat-icon>groups</mat-icon>
                     <small>Abrir público</small>
                   </button>
-                  <button type="button" mat-menu-item [disabled]="!element.access"
-                    (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + element._id)">
+                  <button
+                    type="button"
+                    mat-menu-item
+                    [disabled]="!element.access"
+                    (click)="
+                      linkMe(
+                        '/documentos/' +
+                          document._id +
+                          '/categoria/' +
+                          selectedCategory._id +
+                          '/subcategoria/' +
+                          element._id
+                      )
+                    "
+                  >
                     <mat-icon>lock</mat-icon>
                     <small>Abrir privado</small>
                   </button>
@@ -238,20 +352,44 @@
                     <mat-icon>vpn_key</mat-icon>
                     <small>Solicitar permiso</small>
                   </button> -->
-                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
+                  <button
+                    type="button"
+                    mat-menu-item
+                    *ngIf="
+                      actionControlActivityList.includes(user.activityName)
+                    "
+                  >
                     <mat-icon>settings</mat-icon>
                     <small>Editar</small>
                   </button>
-                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
+                  <button
+                    type="button"
+                    mat-menu-item
+                    *ngIf="
+                      actionControlActivityList.includes(user.activityName)
+                    "
+                  >
                     <mat-icon>drag_handle</mat-icon>
                     <small>Duplicar</small>
                   </button>
-                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
+                  <button
+                    type="button"
+                    mat-menu-item
+                    *ngIf="
+                      actionControlActivityList.includes(user.activityName)
+                    "
+                  >
                     <mat-icon>exit_to_app</mat-icon>
                     <small>Mover</small>
                   </button>
-                  <button type="button" mat-menu-item (click)="killLayout(element)"
-                    *ngIf="actionControlActivityList.includes(user.activityName)">
+                  <button
+                    type="button"
+                    mat-menu-item
+                    (click)="killLayout(element)"
+                    *ngIf="
+                      actionControlActivityList.includes(user.activityName)
+                    "
+                  >
                     <mat-icon>delete</mat-icon>
                     <small>Eliminar</small>
                   </button>
