--- a/src/app/public-documents/components/category-bars/category-bars.component.html
+++ b/src/app/public-documents/components/category-bars/category-bars.component.html
@@ -1,27 +1,57 @@
 <div class="set-12 featured-users">
   <div class="featured-users-circles"></div>
 </div>
+<div class="containercategory">
+  <div class="circle-collaborador">.</div>
+  <div *ngFor="let layout of layouts">
+    <div class="circle-collaborador"></div>
+  </div>
 
+  <button class="btncategory">Categorias</button>
+</div>
 <div class="set-12 bars">
   <div class="set-12 inner-bar" *ngFor="let layout of layouts">
-    <!-- <button type="button" class="linker" matTooltip="Abrir categoría" matTooltipClass="tooltip"
-      matTooltipPosition="left" *ngIf="layoutSelected == layout._id && layoutSelected != ''"
-      (click)="linkMe('/documentos-publicos/' + document_id + '/categoria/' + layout._id)">
+    <!-- <button
+      type="button"
+      class="linker"
+      matTooltip="Abrir categoría"
+      matTooltipClass="tooltip"
+      matTooltipPosition="left"
+      *ngIf="layoutSelected == layout._id && layoutSelected != ''"
+      (click)="
+        linkMe(
+          '/documentos-publicos/' + document_id + '/categoria/' + layout._id
+        )
+      "
+    >
       <mat-icon>shortcut</mat-icon>
     </button> -->
 
-    <div class="grayback">
+    <div class="grayback" [style.width]="layout.stats.score + '%'">
       <button type="button" class="fav">
         <mat-icon>favorite</mat-icon>
       </button>
     </div>
 
-    <div class="gradbar" [style.min-width.%]="40" [style.max-width]="'calc(100% - 70px)'"
-      [style.width.%]="layout.stats.score" [matTooltip]="layout.stats.score + '%'" matTooltipClass="tooltip"
-      matTooltipPosition="right"></div>
+    <div
+      class="gradbar"
+      [style.min-width.%]="10"
+      [style.max-width]="'calc(100% - 70px)'"
+      [style.width.%]="layout.stats.score"
+      [matTooltip]="layout.stats.score + '%'"
+      matTooltipClass="tooltip"
+      matTooltipPosition="right"
+    ></div>
 
-    <button type="button" class="catname"
-      (click)="linkMe('/documentos-publicos/' + document_id + '/categoria/' + layout._id)">
+    <button
+      type="button"
+      class="catname"
+      (click)="
+        linkMe(
+          '/documentos-publicos/' + document_id + '/categoria/' + layout._id
+        )
+      "
+    >
       <small>{{ layout.category.name }}</small>
     </button>
   </div>
