--- a/src/app/components/set-avatar-dialog/set-avatar-dialog.component.html
+++ b/src/app/components/set-avatar-dialog/set-avatar-dialog.component.html
@@ -39,7 +39,9 @@
 
 <div class="set-12 ctrls">
   <button ly-button raised bg="accent" (click)="dialogRef.close()" [disabled]="submitted">Cancelar</button>
-  <button ly-button raised bg="primary" (click)="uploadAvatarImage()"
-    [disabled]="submitted">Guardar</button>
+  <button ly-button raised bg="primary" (click)="uploadAvatarImage()" [disabled]="submitted"
+    *ngIf="!isMobile">Guardar</button>
+  <button ly-button raised bg="primary" (click)="sendAvatarImage()" [disabled]="submitted"
+    *ngIf="isMobile">Guardar</button>
   <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
 </div>
