--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -419,7 +419,7 @@
 
     p {
       margin-top: 20px;
-      text-align: justify;
+      // text-align: justify;
     }
   }
 
@@ -433,7 +433,7 @@
 
     .txt {
       margin-top: 10px;
-      text-align: center;
+      // text-align: center;
     }
 
     .row:not(:first-child) {
@@ -490,9 +490,9 @@
     }
   }
 
-  .mb-page:nth-child(6) {
-    border-bottom: 20px solid #54f093;
-  }
+  // .mb-page:nth-child(6) {
+  //   border-bottom: 20px solid #54f093;
+  // }
 
   .mb-page:nth-child(8) {
     background: #ffffff;
@@ -550,6 +550,63 @@
 
     .set-10 {
       padding-left: 10px;
+    }
+
+    button {
+      width: 100%;
+      margin-top: 10px;
+    }
+  }
+
+  .fixdesk {
+    .mb-page {
+      padding: 40px 25%;
+    }
+
+    .mb-page:nth-child(1) {
+      margin-top: 80px;
+      font-size: 20pt;
+
+      form {
+        display: none;
+      }
+
+      p {
+        margin-top: 0;
+      }
+    }
+
+    .mb-page:nth-child(2) {
+      .row {
+        display: flex;
+        align-items: center;
+
+        * {
+          margin: 0;
+        }
+
+        .icon {
+          width: 15%;
+          margin-right: 40px;
+        }
+
+        .txt {
+          width: 85%;
+          font-size: 17pt;
+        }
+      }
+    }
+
+    .mb-page:nth-child(9) {
+      padding: 0 !important;
+    }
+
+    .horn {
+      width: 22%;
+      left: auto;
+      bottom: auto;
+      top: 110px;
+      right: 2%;
     }
   }
 }
